Changes from jTDS 1.1
=====================

11/03/2005 - Alin Sinpalean
 o Applied Mike's fix for bug [1346086] Problem with DATABASE name change on
   Sybase.
 o Applied patch [1250393] modify getJdbcType() to handle subclass of basic
   JDBC types, submitted by  Joel Schneider (cognophile).

10/31/2005 - Alin Sinpalean
 o Corrected bug in JtdsDatabaseMetaData.getBestRowIdentifier(). Statement was
   closed, causing errors when using the returned result set.

10/27/2005 - Mike Hutchinson
 o Fixed bug "[1305275] Cursor opens fails when cursor threshold <> -1" by
   amending MSCursorResultSet.
 o Fixed bugs "[1283472] Unable to cancel statement with cursor resultset" and
   "[1323363] Deadlock Exception not reported (SQL Server)" by amending
   JtdsStatement executeSQL() and executeSQLQuery().
 o Fixed a bug in handling output parameters that occurs when invoking remote
   stored procedures. The TdsCore.tdsOutputParamToken method was amended.
 o Implement RFE "[1289687] configurable socket setSoTimeout()". This also
   offers a solution to bug "[1297306] Network problem can cause jTDS hang-up".
 o Fixed bug "[1246270] Closing a statement after cancelling it throws an
   exception" by amending JtdsStatement.close().
 o [SQL Server 2005] Database meta data has been improved so that getColumns()
   can distinguish between text and varchar(max), image and varbinary(max) etc.
   Changes were required to JtdsDatabaseMetaData.getColumns() and a new method
   getMSTypeName was added to TdsData. A test case has been added to Tds8Test.
 o [Sybase ASE 15] Added support for new data types unitext, bigint and
   unsigned smallint, int and bigint. This enhancement required changes to
   TdsCore, TdsData and ResponseStream. New test cases have been added to
   Tds5Test.
 o [Sybase ASE 15] With ASE 15 the default packet size is now 2048 bytes. The
   ConnectionJDBC and DefaultProperties classes have been amended so that the